# freeswitch-esl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: blocking.rs  inbound.rs  outbound.rs
src/: blocking.rs  code.rs  connection.rs  dp_tools.rs  error.rs  esl.rs  event.rs  inbound.rs  io.rs  lib.rs  main.rs  main3.rs  outbound.rs  parser.rs
tests/: inbound.rs
