[package]
name = "freeswitch-esl"
version = "0.1.0"
authors = ["KaranGauswami <karangauswami.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
bytes = "1.1"
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
thiserror = "1.0"
