[package]
name = "freeswitch-esl"
version = "0.1.0-alpha.1"
authors = ["KaranGauswami <karangauswami.dev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "FreeSwitch ESL implementation for Rust"
repository = "https://github.com/KaranGauswami/freeswitch-esl.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
bytes = "1.1"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"
serde_json = "1.0"
uuid = { version = "1.2", features = ["v4"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
