[package]
name = "freeswitch-esl"
version = "0.1.0"
authors = ["KaranGauswami <karangauswami.dev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "FreeSwitch ESL implementation for Rust"
repository = "https://github.com/KaranGauswami/freeswitch-esl.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["io-util", "net", "rt","sync"] }
tracing = "0.1"
uuid = { version = "1.4", features = ["v4"] }
thiserror = "1.0"
nom = "7.1"
dashmap = "5.5"

[dev-dependencies]
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
regex ="1.9"
ntest = "0.9.0"
